New projects added

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <section class="profile">
         <div class="content-wrap">
           <h2>ABOUT</h2>
-          <h3>Machine Learning Engineer / Developer</h3>
+          <h3>Machine Learning Engineer / Full Stack Developer</h3>
           <div>
           <p class="centered">
-            As a Machine Learning Engineer I have learned and been exposed to multiple tools and algorithms which provide me with an extensive knowledge filled with options and possibilities within AI. As a Developer I create applications with front and back end content. As an engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
+            As a Machine Learning Engineer, I use multiple libraries, algorithms and neural network models according to the problem to solve at hand. As a Developer, I create applications with front and back end content. As an engineer, I am keen on improving designs and processes using computational tools and team collaboration. I devised this website intending to display some of my past work, current projects, and general information about myself in a more visual way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
@@ -57,11 +57,25 @@
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item centered">
             <a style="height: 181px;">
+            <img src="insurance.png" alt="insurance" class="centered" />
+            </a>
+            <h3>Insurance Cost Prediction - Regression - Neural Network Optimization</h3>
+            <p>
+              ML project focused on decreasing the mean square error metric of a neural network algorithm, within a regression problem. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Matplotlib, Scikit Learn and TensorFlow.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
             <img src="equipment.jpg" alt="bulldozer" class="centered" />
             </a>
             <h3>Sale Price Prediction - Regression</h3>
             <p>
-              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for in the past. Tools used included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
+              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment has been sold for in the past. Tools used include Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -75,7 +89,7 @@
             </a>
             <h3>Dog Breeds Prediction - Classification</h3>
             <p>
-              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
+              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used include Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -89,7 +103,7 @@
             </a>
             <h3>Anomaly Detection - Clustering</h3>
             <p>
-              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used included Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
+              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used include Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -144,7 +158,7 @@
             </a>
             <h3>Cashier Calculator</h3>
             <p>
-              Design responsive application for a store calculator with the option of entering multiple products and quantities, using HTML, CSS and JavaScript.
+              Designed responsive application for a store calculator with the option of entering multiple products and quantities, using HTML, CSS and JavaScript.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -196,14 +210,14 @@
           <div class="container">
                  <div>
                   <ul class="section-flex">
-                    <li>Data Science / AI</li>
-                    <li>Python</li>
                     <li>Machine Learning</li>
+                    <li>Python</li>
                     <li>Scikit-Learn</li>
                     <li>TensorFlow</li>
                     <li>Deep Learning</li> 
                     <li>CNN's</li>
                     <li>Autoencoders</li>
+                    <li>Data Science / AI</li>
                   </ul>
                 </div>
                 <div>
@@ -261,7 +275,7 @@
             <div class="summary">
               <p>
                 Lead website development teams towards creating functional
-                websites for companies dedicated to provide guidance and support
+                websites for companies dedicated to providing guidance and support
                 services to entrepreneurs and worldwide city builders.
               </p>
             </div>
@@ -270,9 +284,9 @@
             </div>
             <div class="summary">
               <p>
-                Collaborated with multi disciplinary teams responsible for product conceptual design,
-                and throughout complete project's life cycle, including initiation,
-                planning, execution, control / monitoring and closing activities.
+                Collaborated with multidisciplinary teams responsible for product conceptual design,
+                and throughout the complete project's life cycle, including initiation,
+                planning, execution, control, monitoring and closing activities.
               </p>
             </div>
             <div class="job-details">
