--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
             <h3>Insurance Cost Prediction - Regression - Neural Network Optimization</h3>
             <p>
-              ML project focused on decreasing the mean square error metric of a neural network algorithm, within a regression problem. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Matplotlib, Scikit Learn and TensorFlow.
+              ML project focused on modeling with TensorFlow: inputting tensors, building a model, fitting the model, evaluating performance, improving the model throughout experimentation, and saving the model for future use. I was able to decrease the mean square error for better performance and overall accuracy. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Matplotlib, Scikit Learn and TensorFlow.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
