Addition of TinyML project

--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item centered">
             <a style="height: 181px;">
+            <img src="tinyml.png" alt="tinyml" class="centered" />
+            </a>
+            <h3>Keyword Spotting Machine Learning Model within an Embedded Device - IoT</h3>
+            <p>
+              ML project whose main goal is to create a neural network model which can recognize voice commands, this is done in a normal computer using GPU's, and then compress it and optimize it for use in a memory constrained embedded device. Once the device recognizes a predetermined command then it will take a previously programmed action. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Arduino's IDE, TensorFlow, TensorFlow Lite, and TensorFlow Micro for microcontrollers.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+           <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
             <img src="insurance.png" alt="insurance" class="centered" />
             </a>
             <h3>Insurance Cost Prediction - Regression - Neural Network Optimization</h3>
