--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
             <h3>Keyword Spotting Machine Learning Model within an Embedded Device - IoT</h3>
             <p>
-              ML project whose main goal is to create a neural network model which can recognize voice commands, this is done in a normal computer using GPU's, and then compress it and optimize it for use in a memory constrained embedded device. Once the device recognizes a predetermined command then it will take a previously programmed action. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Arduino's IDE, TensorFlow, TensorFlow Lite, and TensorFlow Micro for microcontrollers.
+              ML project whose main goal is to create a neural network model which can recognize voice commands, I did this using a regular computer using Google Colab's GPU's, then compress and optimize the model to load it in a memory constrained embedded device. Once the device recognizes a predetermined command then it will take a previously programmed action, like turning leds on and off, and on different colors. Tools I used include Google Colab (using GPU's), Pandas, Numpy, Keras, Arduino's IDE, TensorFlow, TensorFlow Lite, and TensorFlow Micro for microcontrollers.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -75,7 +75,7 @@
             </a>
             <h3>Insurance Cost Prediction - Regression - Neural Network Optimization</h3>
             <p>
-              ML project focused on modeling with TensorFlow: inputting tensors, building a model, fitting the model, evaluating performance, improving the model throughout experimentation, and saving the model for future use. I was able to decrease the mean square error for better performance and overall accuracy. Tools used include Google Colab (using GPU's), Pandas, Numpy, Keras, Matplotlib, Scikit Learn and TensorFlow.
+              ML project focused on modeling with TensorFlow: inputting tensors, building a model, fitting the model, evaluating performance, improving the model throughout experimentation, and saving the model for future use. I was able to decrease the mean square error for better performance and overall accuracy  after trying existing methods to calculates losses. Tools I used include Google Colab (using GPU's), Pandas, Numpy, Keras, Matplotlib, Scikit Learn and TensorFlow.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -89,7 +89,7 @@
             </a>
             <h3>Sale Price Prediction - Regression</h3>
             <p>
-              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment has been sold for in the past. Tools used include Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
+              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment has been sold for in the past. Tools I used include Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -103,7 +103,7 @@
             </a>
             <h3>Dog Breeds Prediction - Classification</h3>
             <p>
-              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used include Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
+              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools I used include Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -117,7 +117,7 @@
             </a>
             <h3>Anomaly Detection - Clustering</h3>
             <p>
-              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used include Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
+              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools I used include Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
