--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </a>
             <h3>Keyword Spotting Machine Learning Model within an Embedded Device - IoT</h3>
             <p>
-              ML project whose main goal is to create a neural network model which can recognize voice commands, I did this using a regular computer using Google Colab's GPU's, then compress and optimize the model to load it in a memory constrained embedded device. Once the device recognizes a predetermined command then it will take a previously programmed action, like turning leds on and off, and on different colors. Tools I used include Google Colab (using GPU's), Pandas, Numpy, Keras, Arduino's IDE, TensorFlow, TensorFlow Lite, and TensorFlow Micro for microcontrollers.
+              ML project whose main goal was to create a neural network model which can recognize voice commands, I did this using a regular computer using Google Colab's GPU's, then compress and optimize the model to load it in a memory-constrained embedded device. Once the device recognizes a predetermined command then it will take a previously programmed action, like turning LEDs on and off, and on different colors. Tools I used include Google Colab (using GPU's), Pandas, Numpy, Keras, Arduino's IDE, TensorFlow, TensorFlow Lite, and TensorFlow Micro for microcontrollers.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
