--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
         	<h2 class="centered">Machine Learning Projects</h2>
           <!--<p>View selected projects below.</p>-->
 
+		  <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="stereo.png" alt="stereo" class="centered" />
+            </a>
+            <h3>Stereo Inference and Depth Application from Video Input</h3>
+            <p>
+              Computer Vision application using a spatial camera with Neural Network computational capabilities, which are used for deep learning inference of depth perception. I performed this task using Python through PyCharm IDE and open source models. Once the output information is obtained and analyzed will be used for a competition where depth perception would be one of the key elements to achieve my team's goals. 
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item centered">
             <a style="height: 181px;">
@@ -226,12 +241,12 @@
                   <ul class="section-flex">
                     <li>Machine Learning</li>
                     <li>Python</li>
-                    <li>Scikit-Learn</li>
+                    <li>Computer Vision</li>
                     <li>TensorFlow</li>
                     <li>Deep Learning</li> 
                     <li>CNN's</li>
-                    <li>Autoencoders</li>
-                    <li>Data Science / AI</li>
+                    <li>OpenCV</li>
+                    <li>Data Science/ AI</li>
                   </ul>
                 </div>
                 <div>
