--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="profile">
         <div class="content-wrap">
           <h2>ABOUT</h2>
-          <h3>Machine Learning Engineer / Full Stack Developer</h3>
+          <h3>Machine Learning Engineer / Software Developer</h3>
           <div>
           <p class="centered">
             As a Machine Learning Engineer, I use multiple libraries, algorithms and neural network models according to the problem to solve at hand. As a Developer, I create applications with front and back end content. As an engineer, I am keen on improving designs and processes using computational tools and team collaboration. I devised this website intending to display some of my past work, current projects, and general information about myself in a more visual way than a typical resume.
